Fixed spacing in suggestion list.

--- a/app/stylesheets/_suggestions.sass
+++ b/app/stylesheets/_suggestions.sass
@@ -28,6 +28,10 @@
     +topic-container
 
     .info
+      margin: 0
       float: left
       img
         vertical-align: middle
+
+    li + li
+      margin-top: 5px
